<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:background="@drawable/login_bg"
  android:orientation="vertical"
  tools:context="com.djunicode.queuingapp.fragment.SignUpTeacherFragment">

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_gravity="center"
      android:fontFamily="monospace"
      android:text="@string/welcome"
      android:textColor="#fff"
      android:textSize="25sp"/>

    <android.support.design.widget.TextInputLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:layout_gravity="center_horizontal"
      android:textColorHint="#bab5b5">

      <EditText
        android:id="@+id/usernameTeacherEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_person"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#fff"/>

    </android.support.design.widget.TextInputLayout>

    <Spinner
      android:id="@+id/departmentTeacherSpinner"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:entries="@array/dept_array"
      android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"/>

    <android.support.design.widget.TextInputLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_gravity="center_horizontal"
      android:textColorHint="#bab5b5">

      <EditText
        android:id="@+id/sapIDTeacherEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_sap"
        android:ems="10"
        android:hint="@string/sap_id"
        android:inputType="text"
        android:textColor="#fff"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_gravity="center_horizontal"
      android:textColorHint="#bab5b5">

      <EditText
        android:id="@+id/passwordTeacherEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#fff"/>

    </android.support.design.widget.TextInputLayout>

  </LinearLayout>

  <android.support.v7.widget.CardView
    android:id="@+id/signUpTeacherButton"
    android:layout_width="350dp"
    android:layout_height="50dp"
    android:layout_marginTop="100dp"
    android:layout_gravity="center_horizontal"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="25dp"
    app:cardElevation="10dp">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="10dp"
      android:drawableEnd="@drawable/ic_send"
      android:gravity="center"
      android:text="@string/sign_up_as_teacher"
      android:textColor="#fff"
      android:textSize="20sp"/>

  </android.support.v7.widget.CardView>

</LinearLayout>
