<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/login_bg"
  tools:context="com.djunicode.queuingapp.LogInActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:layout_gravity="center"
      android:orientation="vertical">

      <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:text="@string/welcome"
        android:textColor="#fff"
        android:textSize="25sp"/>

      <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColorHint="#bab5b5">

        <EditText
          android:id="@+id/usernameEditText"
          android:layout_width="350dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:drawableStart="@drawable/ic_person"
          android:drawablePadding="10dp"
          android:ems="10"
          android:hint="@string/username"
          android:inputType="textPersonName"
          android:textColor="#fff"/>

      </android.support.design.widget.TextInputLayout>

      <Spinner
        android:id="@+id/departmentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:entries="@array/dept_array"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"/>

      <Spinner
        android:id="@+id/yearSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:entries="@array/year_array"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark"/>

      <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="#bab5b5">

        <EditText
          android:id="@+id/sapIDEditText"
          android:layout_width="350dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:drawableStart="@drawable/ic_sap"
          android:drawablePadding="10dp"
          android:ems="10"
          android:hint="@string/sap_id"
          android:inputType="numberDecimal"
          android:textColor="#fff"/>

      </android.support.design.widget.TextInputLayout>

      <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColorHint="#bab5b5">

        <EditText
          android:id="@+id/passwordEditText"
          android:layout_width="350dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:drawableStart="@drawable/ic_lock"
          android:drawablePadding="10dp"
          android:ems="10"
          android:hint="@string/password"
          android:inputType="textPassword"
          android:textColor="#fff"/>

      </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
      android:id="@+id/logInStudentButton"
      android:layout_width="350dp"
      android:layout_height="50dp"
      android:layout_marginTop="60dp"
      android:layout_gravity="center_horizontal"
      android:clickable="true"
      android:focusable="true"
      android:foreground="?attr/selectableItemBackground"
      app:cardBackgroundColor="@color/colorAccent"
      app:cardCornerRadius="25dp"
      app:cardElevation="10dp">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:drawableEnd="@drawable/ic_send"
        android:gravity="center"
        android:text="@string/log_in_as_student"
        android:textColor="#fff"
        android:textSize="20sp"/>

    </android.support.v7.widget.CardView>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:layout_gravity="center_horizontal"
      android:orientation="vertical">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/or"
        android:textColor="#bab5b5"
        android:textSize="15sp"/>

      <TextView
        android:id="@+id/logInTeacherTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_as_teacher"
        android:textColor="#fff"
        android:textSize="15sp"/>

    </LinearLayout>

  </LinearLayout>
</ScrollView>
